# OrcaSlicer

./: .doxygen  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build_flatpak.sh  build_linux.sh  build_release_macos.sh  build_release_vs.bat  build_release_vs2022.bat  plan.md  task.md  version.inc
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: assign.yml  auto-close-duplicates.yml  backfill-duplicate-comments.yml  build_all.yml  build_check_cache.yml  build_deps.yml  build_orca.yml  check_locale.yml  check_profiles.yml  check_profiles_comment.yml  dedupe-issues.yml  doxygen-docs.yml  pr-label-bot.yml  publish_release.yml  shellcheck.yml  unit_tests.yml  update-translation.yml
cmake/modules/: FindGLEW.cmake  MacOSXBundleInfo.plist.in
deps_src/: CMakeLists.txt
deps_src/admesh/: CMakeLists.txt
deps_src/clipper/: CMakeLists.txt
deps_src/imgui/: imgui_widgets.cpp
deps_src/mdns/: CMakeLists.txt  NOTICE.md  cxmdns.cpp
docs/plugins/: plugin_audit_hook.md  plugin_development.md  plugin_system.md  slicing_pipeline_plugin.md
docs/plugins/examples/: host_ui_panel.py  multi_capability_skeleton.py
docs/superpowers/plans/: 2026-07-07-ams-drying-control-plan.md
docs/superpowers/specs/: 2026-07-07-ams-drying-control-design.md
localization/i18n/: OrcaSlicer.pot  list.txt
localization/i18n/ca/: OrcaSlicer_ca.po
localization/i18n/cs/: OrcaSlicer_cs.po
localization/i18n/de/: OrcaSlicer_de.po
localization/i18n/en/: OrcaSlicer_en.po
localization/i18n/es/: OrcaSlicer_es.po
localization/i18n/eu/: OrcaSlicer_eu.po
localization/i18n/fr/: OrcaSlicer_fr.po
localization/i18n/hu/: OrcaSlicer_hu.po
localization/i18n/it/: OrcaSlicer_it.po
localization/i18n/ja/: OrcaSlicer_ja.po
resources/data/: hints.ini
resources/handy_models/: OrcaBadge.3mf  OrcaCube_v2.drc  OrcaPlug_v2.drc  OrcaSliced.3mf  OrcaSliced.drc
resources/hms/: hms_lt_093.json  hms_lt_094.json  hms_lt_22E.json  hms_lt_239.json
resources/orca_plugins/: BBLPrinterAgentPlugin.py  InsetEverySlice.py
resources/printers/: O1D.json  O1E.json  filaments_blacklist.json  version.txt
resources/profiles/: Afinia.json  Anker.json  Anycubic.json  Artillery.json  BBL.json  BIQU.json  Blocks.json  CONSTRUCT3D.json  Chuanying.json  Co Print.json  CoLiDo.json  Comgrow.json  Creality.json  Cubicon.json  Custom.json  DeltaMaker.json  Dremel.json  Elegoo.json  Eryone.json  FLSun.json  Flashforge.json  FlyingBear.json  Folgertech.json  Geeetech.json  Ginger Additive.json  InfiMech.json  Kingroon.json  LH.json  LONGER.json  Lulzbot.json  M3D.json  MagicMaker.json  Mellow.json  OpenEYE.json  OrcaArena.json  OrcaFilamentLibrary.json  Peopoly.json  Phrozen.json  Positron3D.json  Prusa.json  (+25 more)
sandboxes/: orca_fuzzy_slices_plugin_any.py  orca_gcode_stamp_plugin_any.py  orca_inset_plugin_any.py  orca_inspector_plugin_example_any.py  orca_plugin_example.py  orca_twistify_plugin_example_any.py
sandboxes/opencsg/: Engine.hpp
scripts/: appimage_lib_policy.sh  assign_vendor_setting_ids.py  build_flatpak_with_docker.sh  generate_orca_python_stubs.py  orca_extra_profile_check.py  orca_filament_lib.py  retry.sh  run_gettext.bat  run_gettext.sh  run_unit_tests.sh
scripts/flatpak/: com.orcaslicer.OrcaSlicer.metainfo.xml  com.orcaslicer.OrcaSlicer.yml  setup_env_ubuntu24.04.sh
scripts/linux.d/: arch  fedora  suse
scripts/msix/: AppxManifest.xml  build_msix.ps1  generate_assets.ps1
src/: CMakeLists.txt  OrcaSlicer.cpp  OrcaSlicer_app_msvc.cpp
src/dev-utils/: BaseException.cpp  OrcaSlicer_profile_validator.cpp  StackWalker.cpp  encoding-check.cpp
src/libslic3r/: AppConfig.cpp  AppConfig.hpp  Arrange.cpp  Brim.cpp  Brim.hpp  CMakeLists.txt  Clipper2Utils.cpp  Clipper2Utils.hpp  ClipperUtils.cpp  ClipperUtils.hpp  Config.cpp  Config.hpp  ContourZ.cpp  CutUtils.cpp  CutUtils.hpp  Extruder.cpp  Extruder.hpp  ExtrusionEntity.hpp  ExtrusionEntityCollection.hpp  FilamentGroup.cpp  FilamentGroup.hpp  FilamentGroupUtils.cpp  FilamentGroupUtils.hpp  Flow.cpp  GCode.cpp  GCode.hpp  GCodeWriter.cpp  GCodeWriter.hpp  Geometry.hpp  Int128.hpp  Layer.cpp  Layer.hpp  LayerRegion.cpp  Model.cpp  Model.hpp  ModelArrange.cpp  MultiMaterialSegmentation.cpp  MultiNozzleUtils.cpp  MultiNozzleUtils.hpp  MutablePolygon.cpp  (+43 more)
src/slic3r/: CMakeLists.txt  GeneratedConfig.hpp.in
tests/: CLAUDE.md  CMakeLists.txt  test_utils.hpp
tests/fff_print/: CMakeLists.txt  README.md  test_cooling.cpp  test_data.cpp  test_data.hpp  test_extrusion_entity.cpp  test_fill.cpp  test_flow.cpp  test_gcode_timing.cpp  test_gcodewriter.cpp  test_helpers.cpp  test_helpers.hpp  test_model.cpp  test_multifilament.cpp  test_print.cpp  test_printgcode.cpp  test_printobject.cpp  test_skirt_brim.cpp  test_slicing_pipeline_hook.cpp  test_support_material.cpp  test_trianglemesh.cpp
tests/filament_group/: CMakeLists.txt  fg_test_evaluator.hpp  filament_group_regression_main.cpp
tests/libnest2d/: CMakeLists.txt  libnest2d_test_utils.hpp  libnest2d_tests.cpp  test_geometry.cpp  test_nfp.cpp  test_nfp_placer.cpp
tests/libslic3r/: CMakeLists.txt  test_3mf.cpp  test_arachne_walls.cpp  test_arrange.cpp  test_bambu_networking.cpp  test_calib.cpp  test_config.cpp  test_config_variant_expansion.cpp  test_nozzle_volume_type.cpp  test_placeholder_parser.cpp  test_preset_bundle_loading.cpp  test_preset_diff.cpp  test_preset_setting_id.cpp  test_toolordering_nozzle_group.cpp  test_utils.cpp
tests/sla_print/: CMakeLists.txt
tests/slic3rutils/: CMakeLists.txt  plugin_test_utils.hpp  python_test_support.hpp  slic3rutils_tests_main.cpp  test_action_source.cpp  test_dev_mapping.cpp  test_network_versions.cpp  test_plugin_audit.cpp  test_plugin_callback_list.cpp  test_plugin_capabilities_in_use.cpp  test_plugin_capability_config.cpp  test_plugin_capability_identifier.cpp  test_plugin_cloud_metadata.cpp  test_plugin_config.cpp  test_plugin_host_api.cpp  test_plugin_install.cpp  test_plugin_lifecycle.cpp  test_plugin_sort.cpp  test_slicing_pipeline_bindings.cpp  test_slicing_pipeline_config.cpp  test_slicing_pipeline_params.cpp  test_speed_dial_action_id.cpp
(+10245 files in other folders)
